@@ -2,61 +2,77 @@ package com.bank.service_loan.serviceimpl;
 
 import com.bank.service_loan.dto.LoanRequestDTO;
 import com.bank.service_loan.dto.LoanResponseDTO;
-import com.bank.service_loan.dto.LoanMapper;
 import com.bank.service_loan.model.Loan;
-import com.bank.service_loan.model.LoanStatus;
 import com.bank.service_loan.repository.LoanRepository;
-import com.bank.service_loan.repository.LoanStatusRepository;
 import com.bank.service_loan.service.LoanService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 
-import java.math.BigDecimal;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class LoanServiceImpl implements LoanService {
 
     private final LoanRepository loanRepository;
-    private final LoanStatusRepository loanStatusRepository;
 
     @Override
-    public LoanResponseDTO createLoan(LoanRequestDTO dto) {
-        LoanStatus status = loanStatusRepository.findById((byte) 1) // PENDIENTE
-                .orElseThrow(() -> new IllegalArgumentException("Loan status not found"));
-
-        Loan loan = LoanMapper.toEntity(dto, status);
-        return LoanMapper.toDto(loanRepository.save(loan));
+    public LoanResponseDTO createLoan(LoanRequestDTO request) {
+        Loan loan = Loan.builder().build();
+        BeanUtils.copyProperties(request, loan);
+        loan = loanRepository.save(loan);
+        return toResponseDTO(loan);
     }
 
     @Override
-    public Optional<LoanResponseDTO> getLoanById(Long id) {
-        return loanRepository.findById(id).map(LoanMapper::toDto);
-    }
-
-    @Override
-    public List<LoanResponseDTO> getLoansByUserId(Long userId) {
-        return loanRepository.findByUserId(userId).stream().map(LoanMapper::toDto).toList();
+    public LoanResponseDTO getLoanById(Long id) {
+        return loanRepository.findById(id)
+                .map(this::toResponseDTO)
+                .orElse(null);
     }
 
     @Override
     public List<LoanResponseDTO> getAllLoans() {
-        return loanRepository.findAll().stream().map(LoanMapper::toDto).toList();
+        return loanRepository.findAll().stream()
+                .map(this::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public LoanResponseDTO approveLoan(Long id, double approvedAmount) {
-        Loan loan = loanRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Loan not found"));
+    public List<LoanResponseDTO> getLoansByUserId(Long userId) {
+        return loanRepository.findByUserId(userId).stream()
+                .map(this::toResponseDTO)
+                .collect(Collectors.toList());
+    }
 
-        LoanStatus approvedStatus = loanStatusRepository.findById((byte) 2) // APROBADO
-                .orElseThrow(() -> new IllegalArgumentException("Approved status not found"));
+    @Override
+    public LoanResponseDTO updateLoan(Long id, LoanRequestDTO request) {
+        return loanRepository.findById(id).map(existing -> {
+            BeanUtils.copyProperties(request, existing, "id");
+            return toResponseDTO(loanRepository.save(existing));
+        }).orElse(null);
+    }
 
-        loan.setApprovedAmount(BigDecimal.valueOf(approvedAmount));
-        loan.setStatus(approvedStatus);
+    @Override
+    public void deleteLoan(Long id) {
+        loanRepository.deleteById(id);
+    }
 
-        return LoanMapper.toDto(loanRepository.save(loan));
+    private LoanResponseDTO toResponseDTO(Loan loan) {
+        return LoanResponseDTO.builder()
+                .id(loan.getId())
+                .userId(loan.getUserId())
+                .requestedAmount(loan.getRequestedAmount())
+                .approvedAmount(loan.getApprovedAmount())
+                .loanTypeId(loan.getLoanTypeId())
+                .interestRate(loan.getInterestRate())
+                .installments(loan.getInstallments())
+                .loanStatusId(loan.getLoanStatusId())
+                .requestDate(loan.getRequestDate())
+                .approvalDate(loan.getApprovalDate())
+                .dueDate(loan.getDueDate())
+                .build();
     }
 }
